--- a/Client/Shared/NavMenu.razor
+++ b/Client/Shared/NavMenu.razor
@@ -25,6 +25,13 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> @LoText["sidemenu_fetch"]
             </NavLink>
         </div>
+        <AuthorizeView Roles="Administrator">
+            <div class="nav-item px-3">
+                <NavLink class="nav-link" href="role">
+                    <span class="oi oi-list-rich" aria-hidden="true"></span> @LoText["sidemenu_role"]
+                </NavLink>
+            </div>
+        </AuthorizeView>
     </nav>
 </div>
 
